// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LoadingSpinner Snapshot Consistency should maintain structure with all props 1`] = `
<div
  class="flex items-center gap-2 custom-spinner"
>
  <div
    aria-label="Loading"
    class="animate-spin rounded-full motion-reduce:animate-none motion-reduce:border-t-4 border-gray-300 border-t-blue-600 dark:border-gray-700 dark:border-t-blue-400 w-8 h-8 border-3"
    role="status"
  />
  <span
    class="text-sm text-gray-600 dark:text-gray-400"
  >
    Loading data...
  </span>
</div>
`;

exports[`LoadingSpinner Snapshot Consistency should maintain structure with default props 1`] = `
<div
  class="flex items-center gap-2"
>
  <div
    aria-label="Loading"
    class="animate-spin rounded-full motion-reduce:animate-none motion-reduce:border-t-4 border-gray-300 border-t-blue-600 dark:border-gray-700 dark:border-t-blue-400 w-6 h-6 border-2"
    role="status"
  />
</div>
`;
